cabal-version:   3.12
name:            dump-hie
version:         0.1.0.0
license:         NONE
author:          Ori Levenglick
maintainer:      61731312+o11k@users.noreply.github.com
build-type:      Simple
extra-doc-files: README.md

common warnings
    ghc-options: -Wall

executable dump-hie
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
                    , ghc
                    , containers
                    , aeson
                    , bytestring
                    , text
                    , vector
    hs-source-dirs:   app
    default-language: Haskell2010
